# django-saas-boilerplate

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  78.1.1  Dockerfile  Dockerfile.dev  Makefile  README.md  TODO.md  conftest.py  coverage_analysis.py  fix_type_annotations.py  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  test_summary.md  use_anaconda.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  apps.py  middleware.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/accounts/management/: __init__.py
apps/accounts/management/commands/: seed_demo.py  sync_groups.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: test_account_views.py  test_api_views.py  test_authentication_views.py  test_models.py  test_serializers.py  test_urls.py  test_views.py
apps/api/: admin.py  apps.py  models.py  serializers.py  test_integration.py  test_models.py  test_serializers.py  test_urls.py  test_views.py  tests.py  urls.py  views.py
apps/api/migrations/: 0001_initial.py  0002_alter_apikey_permissions.py
apps/api/tests/: test_api_views.py  test_integration.py  test_models.py  test_serializers.py  test_views.py
apps/config/: asgi.py  celery.py  urls.py  wsgi.py
apps/config/settings/: base.py  local.py  prod.py  test.py
apps/core/: __init__.py  apps.py  authentication.py  enums.py  middleware.py  mixins.py  pagination.py  permissions.py  tasks.py  tests.py  utils.py  validators.py
apps/core/tests/: test_core_utilities.py  test_enums_permissions_utils.py  test_middleware.py  test_tasks.py
apps/emails/: __init__.py  admin.py  apps.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/emails/migrations/: 0001_initial.py  0002_add_failed_at_field.py  __init__.py
apps/emails/tests/: test_email_system.py  test_models.py  test_services.py  test_services_tasks.py  test_views.py
apps/featureflags/: README_CACHE_MANAGEMENT.md  apps.py  helpers.py  test_cache_management.py  test_helpers.py  tests.py  tests_commands.py
apps/featureflags/management/: __init__.py
apps/featureflags/management/commands/: __init__.py  sync_flags.py
apps/files/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/files/migrations/: 0001_initial.py
apps/files/tests/: __init__.py  test_file_management.py  test_serializers_views.py
apps/ops/: __init__.py  apps.py  metrics.py  tasks.py  tests.py  urls.py  views.py
apps/ops/tests/: __init__.py  test_metrics.py  test_tasks.py
compose/: docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
docs/: index.md  quickstart.md  requirements.md
requirements/: README.md  base.txt  dev.txt  prod.txt  test.txt
scripts/: backup_db.sh
venv_new/: pyvenv.cfg
venv_new/Scripts/: activate  activate.bat
